# markov_tweet_politics

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
lyrics/: affaire_en_cours_1993.txt  arme_de_distraction_massive_2003.txt  femme_seule_2003.txt  je_viens_de_marseille_1991.txt  l_ecole_du_micro_d_argent_1997.txt  le_nouveau_president_1991.txt  marseille_la_nuit_1998.txt  noble_art_2003.txt  petit_frere_1997.txt  sachet_blanc_1993.txt  une_autre_brique_dans_le_mur_2007.txt
speeches/: chirac_speech1.txt  chirac_speech2.txt  chirac_speech3.txt  chirac_speech4.txt  chirac_speech5.txt  chirac_speech6.txt
src/: discord_bot.py  models.py  wsgi.py
